# book-swap-bot

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  I18N_CHECKLIST.md  I18N_README.md  I18N_SETUP.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  translate.sh
app/: config.py  database.py  handlers.py  i18n.py  logger.py  main.py  models.py
app/bot/: __init__.py  bot.py  handlers.py  keyboards.py  utils.py
app/db/: __init__.py  migration.py  models.py  session.py
app/db/alembic/: alembic.ini  env.py
app/db/alembic/versions/: 8f096d0de9f2_init_add_book_and_user.py
app/scripts/: seed_example.py
app/web/: __init__.py  app.py
locale/: messages.pot
locale/en/LC_MESSAGES/: messages.mo  messages.po
locale/es/LC_MESSAGES/: messages.po
locale/fa/LC_MESSAGES/: messages.mo  messages.po
